blockml/test/valid/10_wherecalc_refs_mea/v23/v23d.dashboard
dashboard: v23d
title: 'sales'
reports:
- title: 'weekly'
  model: v23m
  select:
  - a.dim6
  type: 'table'
