blockml/test/errors/11_report/e97/e97d.dashboard
dashboard: e97d
title: 'sales'
fields:
- filter: category
  result: number

reports:
- title: 'overview'
  model: e97m
  listen_filters:
    category: a.unk   
  select:
  - a.dim1

